src/app/title/title.component.scss
@import '../../assets/sass/partials/theme-default';
@import '../../assets/sass/partials/breakpoints';
@import './title-breakpoints.component.scss';
a {
  color: black;
  text-decoration: none;
  &:hover,
  &:visited {
    color: black;
    text-decoration: none;
  }
}
h1 {
  font-size: unset;
  margin: 0 1rem 0 0;
  display: inline;
}
@mixin medium-and-larger-screen {
  display: inline-grid;
  grid-template-columns: 100px auto;
  grid-template-rows: 1fr auto;
  justify-items: start;
  align-items: end;
  column-gap: 10px;
  font-size: 60px;
  row-gap: 20px;
}

.magazine-title {
  vertical-align: middle;

  width: 100%;

  @include title-small-screen {
    display: inline-grid;
    grid-template-columns: auto;
    grid-template-rows: 20vh 1fr;
    justify-items: center;
    align-items: center;
    font-size: 40px;
  }

  @include title-medium-screen {
    @include medium-and-larger-screen;
  }

  @include title-larger-screen {
    @include medium-and-larger-screen;
  }
  border-bottom: solid 2px rgba-secondary-2(0.7);

  .logo {
    height: 100%;
    .logoimg {
      border-radius: 50%;
      max-height: 100%;
      max-width: 100%;
      object-fit: contain;
    }
  }
}

.subtitle {
  font-size: 0.4em;
  @include small-screen {
    display: block;
    text-align: end;
  }
}

